# WebVirt

./: 404.html  CNAME  LICENSE  README.md  index.html  sitemap.xml
backend/: .env.sample  .gitignore  pyproject.toml  requirements.txt
backend/app/: config.py
backend/app/database/: main.py  models.py
backend/app/ldap/: main.py
backend/app/models/: token.py  vms.py
backend/app/routers/: admin.py  auth.py  main.py  vms.py
backend/app/utils/: auth.py  exceptions.py  tasks.py  vms.py
configuration/: index.html
docs/: mkdocs.yml
docs/docs/: configuration.md  index.md  installation.md  management.md  prerequisites.md  quirks.md  usage.md
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.jsx  Home.jsx  Login.jsx  PrivateRoute.jsx
installation/: index.html
management/: index.html
prerequisites/: index.html
quirks/: index.html
search/: search_index.json
usage/: index.html
utils/: bulk_expose.py
